------------
mtPaint NEWS
------------

Here is a summary of the main changes in this release (see handbook for full details):

3.41	2013-??-??
	* Undo system now uses a bit less memory
	* XPM files with 65-92 colours are now saved with smaller size
	* BUGFIX - Geometry info on the status bar now correctly updates after arrow keys or Escape key
	* BUGFIX - New image creation from system clipboard now respects "Undoable" toggle
	* BUGFIX - Problem with layers list in inactive dock tab sometimes not updating is now eliminated

3.40	2011-12-30

	* Tagalog translation added by Anjelo delCarmen
	* Hungarian translation added by Ur Balazs
	* Czech translation updated by Roman Hornik
	* German translation updated by B. Clausius
	* Italian translation updated by Angelo Gemmi
	* Japanese translation updated by Norihiro YONEDA
	* Swedish translation updated by Daniel Eriksson
	* Spanish translation updated by Adolfo Jayme
	* Brazilian Portuguese translation updated by Valter Nazianzeno
	* Chinese (Simplified) translation updated by Cecc
	* Russian translation updated
	* Eliminated flicker when positioning line, polygon side, or gradient in Windows version
	* Scrolling made more smooth in Windows version
	* Dock area now holds settings toolbar and layers dialog when their windows are closed
	* Main toolbar and tools toolbar now rearrange themselves to fit in window
	* Preferences window now has scrollbars when screen is too small to display it whole
	* The preview button on the colour selectors is now a toggle to enable interactive previews
	* Line tool now displays geometry info on the status bar
	* Gaussian blur effect now faster by 20-35%
	* Image scaling now faster by 10-35%
	* "Protect details" toggle added to Kuwahara-Nagao blur
	* Image scaling, Gaussian blur, Unsharp mask and Difference of Gaussians effects now use multithreading to utilize all available CPU cores
	* Moving the pointer with the arrow keys now scrolls the canvas when moving beyond the viewport