@@ -82,35 +82,35 @@ static char *icon_xpm[] = {
 "<	c #5050FF",
 "=	c #8080FF",
 "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
-"AAAAAKAAAAAAAAAgAAAAAAAAAGAAAAAA",
-"AAAACJQAAAAAAAZkcAAAAAAAKH/AAAAA",
-"AAAAFHPAAAAAAAelmAAAAAAANPBAAAAA",
-"AAA3WLUaAAAAA3xtsaAAAAA38F6aAAAA",
+"AAAAAKAAAAAAAAAgAAAAAAAAA(AAAAAA",
+"AAAACJQAAAAAAAZkcAAAAAAA-)/AAAAA",
+"AAAAFHPAAAAAAAelmAAAAAAA;=#AAAAA",
+"AAA3WLUaAAAAA3xtsaAAAAA38'6aAAAA",
 "AAA42zuiAAAAA42zuiAAAAA42zuiAAAA",
 "AA351zwnaAAA351zwnaAAA351zwnaAAA",
 "AA450zyniAAA450zyniAAA450zyniAAA",
-"AAISzzzVTAAArvzzzopAAAIEzzz79AAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAGGHHHOOAAAfflllqqAAAOOPPPAAAAA",
-"AAEGHHHONAAAdflllqjAAAMOPPPACAAA",
-"AABDHHHMRAAAXblllhYAAAJLPPPD+AAA",
+"AAISzzzVTAAArvzzzopAAA*&zzz79AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAGGHHHOOAAAfflllqqAAA<<===!!AAA",
+"AAEGHHHONAAAdflllqjAAA:<===!$AAA",
+"AABDHHHMRAAAXblllhYAAA,.===%+AAA",
 "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA",
 "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 };
